prueba-five-commit-modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,11 @@ body{
   background-color: #0499EF;
 }
 
+
 .hero{
   background-image: url("../img/bg_hero.png");
   background-repeat: no-repeat;
   background-size: cover;
   padding-bottom: 10rem;
+  background-position: center center;
 }
